fix(z-index): Add/change z-index for popup/layout
We need to be able to have popups show up over the layout (they have precedence over everything).

--- a/packages/orion/src/Layout/layout.css
+++ b/packages/orion/src/Layout/layout.css
@@ -3,7 +3,7 @@
 }
 
 .ui.layout .layout-topbar {
-  @apply fixed top-0 left-0 z-50;
+  @apply fixed top-0 left-0 z-40;
   @apply flex flex-shrink-0 items-center justify-center h-48 w-full bg-white;
   @apply border-b-1 border-gray-900-16;
 }
