--- a/packages/orion/src/Popup/popup.css
+++ b/packages/orion/src/Popup/popup.css
@@ -1,3 +1,3 @@
 .ui.popup.basic {
-  @apply bg-white border border-gray-900-16 mt-8 p-16 rounded shadow-200;
+  @apply bg-white border border-gray-900-16 mt-8 p-16 rounded shadow-200 z-50;
 }
